Attempt to fix grid jumping bug

--- a/src/styles/rpg-styles.css
+++ b/src/styles/rpg-styles.css
@@ -46,7 +46,8 @@
 }
 
 .asset-widget-full-header {
-
+  display: flex;
+    flex-direction: column;
 }
 
 .asset-widget-name {
